--- a/default.hbs
+++ b/default.hbs
@@ -108,6 +108,8 @@ $(document).ready(function () {
 </script>
 {{/is}}
 
+<script src="{{asset "built/app.js"}}"></script>
+
 {{ghost_foot}}
 {{!-- Outputs important scripts - should always be included before closing body tag --}}
 
